# Draw_Colliders

./: .gitignore  CMakeLists.txt  README.md  TODO  build.sh  main.cpp  sqlite.db
include/all/SDL2_gxf/: SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h  SDL2_rotozoom.c  SDL2_rotozoom.h
include/all/SDL_FontCache/: SDL_FontCache.c  SDL_FontCache.h
include/all/nativefiledialog/: nfd_win.cpp
include/all/nlohmann/: json.hpp
include/all/tinyfiledialogs/: tinyfiledialogs.c
include/all/tinyxml2/: tinyxml2.cpp  tinyxml2.h
lib/SDL2_gxf/: SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h  SDL2_rotozoom.c
lib/SDL_FontCache/: SDL_FontCache.h
lib/nlohmann/: json.hpp
lib/win/: SDL2_gfx.lib
src/: CMakeLists.txt  main.cpp
src/App/: CMakeLists.txt  core.cpp  core.h  data.cpp  data.h  graphics.ixx  loop.cpp  loop.h
src/App/Bounding_Boxes/: aabb.cpp  aabb.h  circle.cpp  circle.h  e_shape.cpp  e_shape.h  line_segment.cpp  line_segment.h  point.cpp  point.h  polygon.cpp  polygon.h  shape.cpp  shape.h
src/App/Settings/: save.cpp  save.h  serialise.cpp  serialise.h
src/Graphics/: CMakeLists.txt  graphics.cpp  graphics.h  render.cpp  render.h  text.cpp  text.h
src/Input/: CMakeLists.txt  actions.cpp  actions.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  window.cpp  window.h
src/Output/: CMakeLists.txt  json.cpp  json.h  sqlite.cpp  sqlite.h  xml.cpp  xml.h
src/Panels/: CMakeLists.txt  bottom.cpp  bottom.h  center.cpp  center.h  menu.cpp  menu.h  top.cpp  top.h
src/Panels/Center/: center.cpp  center.h  left.cpp  left.h  right.cpp  right.h
src/UI/: CMakeLists.txt  scroll_bar.cpp  scroll_bar.h
src/Utils/: CMakeLists.txt  log.cpp  log.h  utils.cpp  utils.h
